--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 <body>
     <div class="theme-toggle" onclick="toggleTheme()">🌓</div>
     <header>
-        <h1>Your Name</h1>
-        <p>Web Developer | City, Country</p>
+        <h1>Yang Lu</h1>
+        <p>Associate Professor | York St John University, UK</p>
+        <p>School of Science, Technology and Health</p>
+        <p>Lord Mayor's Walk, York YO31 7EX</p>
+        <a href="https://scholar.google.com/citations?hl=en&user=GR9CGCUAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar Profile</a>
     </header>
 
     <section class="section">
@@ -47,7 +50,7 @@
     </section>
 
     <section class="section">
-        <h2>Skills</h2>
+        <h2>Educations</h2>
         <ul>
             <li>HTML, CSS, JavaScript</li>
             <li>React, Vue.js</li>
